# zAugment

./: .gitignore  BUILD_OPTIMIZATION_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  README.md  RELEASE_NOTES_v0.4.1.md  RESET_IMPROVEMENTS.md  package-lock.json  package.json  test_timezone.html  vite.config.js
.github/workflows/: build.yml
scripts/: deploy.ps1  deploy.sh  release.bat  release.sh  test-build.ps1  test-build.sh
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  bash.exe.stackdump  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  augment_oauth.rs  augment_user_info.rs  bookmarks.rs  main.rs  outlook_manager.rs  thresholds.rs
src-tauri/src/storage/: local_storage.rs  mod.rs  traits.rs
src-tauri/src/webdav/: client.rs  config.rs  error.rs  mod.rs  retry.rs  secure_config.rs  sync.rs
src/components/: AccountManagerModal.vue  ApiServerStatus.vue  BookmarkManager.vue  CreditUsageContent.vue  CustomTitleBar.vue  EditorResetModal.vue  EmailDetails.vue  EmailManagerContent.vue  ImportListModal.vue  ImportTokensModal.vue  ModalContainer.vue  OutlookManager.vue  SyncStatus.vue  TagEditorModal.vue  ThresholdConfigModal.vue  TokenCard.vue  TokenForm.vue  TokenGenerator.vue  TokenList.vue  UpdateChecker.vue
src/stores/: importRecords.js
