[package]
name = "ZAugment"
version = "0.5.1"
description = "Augment Token Manager - 用于生成和管理 Augment OAuth 访问令牌的桌面应用"
authors = ["cubezhao"]
license = "MIT"
repository = "https://github.com/zhaochengcube/augment-token-mng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
open = "5.0"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
url = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
# WebDAV 和云同步相关依赖
http = "0.2"
hyper = "0.14"
ring = "0.16"  # 加密库
keyring = "2.0"  # 安全存储凭据
tokio-cron-scheduler = "0.9"  # 定时同步
tokio-retry = "0.3"  # 重试机制
backoff = "0.4"  # 指数退避算法
futures = "0.3"  # 异步工具
async-recursion = "1.0"  # 异步递归
thiserror = "1.0"  # 错误处理宏
log = "0.4"  # 日志库
# 邮件功能依赖
imap = "2.4"
native-tls = "0.2"
regex = "1.0"

async-trait = "0.1"
# 编辑器重置功能依赖
rusqlite = { version = "0.29", features = ["bundled"] }
sysinfo = "0.29"
dirs = "5.0"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
